Add forgot password and reset password route
